--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@trendmicro/react-interpolate": "^0.5.5",
     "bootstrap": "^5.2.2",
+    "flubber": "^0.4.2",
     "framer-motion": "^7.6.4",
+    "interpolate": "^0.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
