[feat] description added and fix formulary send email

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-interpolate": "^0.5.5",
     "bootstrap": "^5.2.2",
+    "emailjs-com": "^3.2.0",
     "flubber": "^0.4.2",
     "framer-motion": "^7.6.4",
     "interpolate": "^0.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^4.6.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
